# ai-edms-assistant

./: .env  .env.example  .gitignore  Dockerfile  README.md  config.py  doc  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_all.sh
edms_ai_assistant/: ARCHITECTURE.md  README.md  config.py  docker-compose.yml  llm_client.py
edms_ai_assistant/db/: database.py
edms_ai_assistant/docs/: init_db.sql
edms_ai_assistant/feedback-collector/: Dockerfile  feedback_api.py  requirements.txt
edms_ai_assistant/feedback_collector/: Dockerfile  feedback_api.py  requirements.txt
edms_ai_assistant/infrastructure/: prometheus.yml  redis_client.py
edms_ai_assistant/mcp-server/: Dockerfile  edms_mcp_server.py  mcp_http_bridge.py  requirements.txt  run_server.py  server_app.py  tools_registry.json
edms_ai_assistant/mcp-server/clients/: base_client.py
edms_ai_assistant/mcp_server/: Dockerfile  config.py  edms_mcp_server.py  llm.py  mcp_http_bridge.py  requirements.txt  run_server.py  tools_registry.json
edms_ai_assistant/mcp_server/clients/: attachment_client.py  base_client.py  department_client.py  document_client.py  document_creator_client.py  employee_client.py  group_client.py  reference_client.py  task_client.py
edms_ai_assistant/mcp_server/services/: appeal_extraction_service.py  document_enricher.py  document_service.py  file_processor.py  introduction_service.py  task_service.py
edms_ai_assistant/mcp_server/tools/: appeal_tools.py  content_tools.py  document_tools.py  router.py  workflow_tools.py
edms_ai_assistant/monitoring/: grafana_dashboards.json  prometheus.yml
edms_ai_assistant/monitoring/dashboards/: edms_ai_dashboard.json
edms_ai_assistant/orchestrator/: Dockerfile  agent.py  agent_orchestrator.py  alembic.ini  cache.py  config.py  db_init.py  entrypoint.sh  llm.py  main.py  main_entrypoint.py  mcp_client.py  memory.py  model.py  multi_agent.py  nlp_preprocessor.py  rag_module.py  requirements.txt  security.py  settings.py
edms_ai_assistant/orchestrator/alembic/: env.py
edms_ai_assistant/orchestrator/clients/: __init__.py  attachment_client.py  base_client.py  department_client.py  document_client.py  document_creator_client.py  employee_client.py  group_client.py  reference_client.py  task_client.py
edms_ai_assistant/orchestrator/db/: database.py
edms_ai_assistant/orchestrator/models/: appeal_fields.py
edms_ai_assistant/orchestrator/prompts/: explainer_prompt.txt  (+3 more)
edms_ai_assistant/scripts/: logs.sh  start.sh  stop.sh  test_api.sh
edms_ai_assistant/shared/: utils.py
mcp_server/: edms_mcp_server.py  run_server.py
mcp_server/models/: task_models.py
mcp_server/services/: appeal_extraction_service.py  document_enricher.py  document_service.py  task_service.py
mcp_server/tools/: document_tools.py
tests/: codewars.py  test_llm_invoke.py
(+148 files in other folders)
