[project]
name = "ai-edms-assistant"
version = "0.1.0"
description = "AI-Powered EDMS Task Automation Assistant"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Next", email = "your.email@example.com" }]
keywords = ["ai", "next", "edms", "automation", "assistant", "langchain"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=1.1.2,<2.0.0",
    "langchain-community>=0.4.1,<1.0.0",
    "langchain-core>=1.1.1,<2.0.0",
    "langchain-experimental>=0.4.0,<0.5.0",
    "langchain-openai>=1.1.0,<1.2.0",
    "langgraph>=1.0.4,<2.0.0",
    "langgraph-prebuilt>=1.0.5,<2.0.0",
    "langgraph-checkpoint-postgres>=3.0.1,<4.0.0",
    "fastapi>=0.123.9,<0.124.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pypdf2>=3.0.1,<3.1.0",
    "requests>=2.32.5,<3.0.0",
    "tiktoken>=0.12.0,<0.13.0",
    "typing-extensions>=4.15.0,<5.0.0",
    "pymupdf>=1.6.6,<2.0.0",
    "chromadb>=1.3.5,<2.0.0",
    "python-multipart>=0.0.20,<0.1.0",
    "pyjwt[crypto]>=2.10.1,<3.0.0",
    "redis>=7.1.0,<8.0.0",
    "psycopg[binary]>=3.3.1,<4.0.0",
    "sqlalchemy>=2.0.44,<3.0.0",
    "structlog>=25.5.0,<26.0.0",
    "anyio>=4.12.0,<5.0.0",
    "httpx>=0.28.1,<0.30.0",
    "jsonpath_ng>=1.7.0,<2.0.0",
    "docx2txt>=0.9,<0.10",
    "openpyxl>=3.1.5,<4.0.0",
    "xlrd>=2.0.2,<3.0.0",
    "memory>=1.0.0,<2.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "docx>=0.2.4,<0.3.0",
    "aiofiles>=25.1.0,<26.0.0",
    "command>=0.1.0,<0.2.0",
    "torch>=2.9.1,<3.0.0",
    "unstructured_inference>=1.1.2,<2.0.0",
]

[dependency-groups]
#managed = true
dev = [
    "pytest>=9.0.2",
    "black>=26.1.0",
    "isort>=7.0.0",
    "hatchling>=1.28.0",
    "mypy>=1.19.1",
    "ruff>=0.15.1",
]

# Настройка Black (форматирование кода)
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '/(\.venv|\.git|tests)/'

# Настройка isort (сортировка импортов)
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["ai_edms_assistant"]

# Настройка Pytest (тесты)
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

# Настройка Mypy (проверка типов)
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
packages = ["ai_edms_assistant"]
mypy_path = "src"

[tool.ruff]
select = ["E", "F", "I", "B", "C4"]
ignore = ["D100", "D104"]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_edms_assistant"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



